--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap" rel="stylesheet">
+  
   <style>
+
+    @media (max-width: 600px) {
+ 
+    }
     html {
       height: 100%;
+      font-size: calc(15px + 0.390625vw);
     }
     body {
       font-family: 'Sono', sans-serif;
