--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   
   <style>
 
-    @media (max-width: 600px) {
- 
+      @media (max-width: 600px) {
+        html {
+          font-size: 26px; 
+        }
+        
     }
     html {
       height: 100%;
-      font-size: calc(15px + 0.390625vw);
     }
     body {
       font-family: 'Sono', sans-serif;
