--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
   
   <style>
 
-      @media (max-width: 600px) {
-        html {
-          font-size: 26px; 
-        }
-        
-    }
     html {
       height: 100%;
     }
@@ -22,6 +16,7 @@
       font-family: 'Sono', sans-serif;
       text-align: center;
       height: 100%;
+      -webkit-text-size-adjust: 100%;
     }
 
     .plan-features {
