--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
 
     .plan-features > li {
-      margin: 0.3rem;
+      margin: 0.3em;
     }
 
     .pricing-container {
@@ -53,13 +53,13 @@
 
     .plan-title {
       font-weight: bold;
-      font-size: 1.3rem;
+      font-size: 1.3em;
       margin-bottom: 8px;
     }
 
     .plan-price {
       font-weight: bold;
-      font-size: 2rem
+      font-size: 2em
     }
 
     .plan-button {
