--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
   
   <style>
 
-    html {
-      height: 100%;
-    }
     body {
       font-family: 'Sono', sans-serif;
       text-align: center;
-      height: 100%;
       -webkit-text-size-adjust: 100%;
     }
 
@@ -73,6 +69,9 @@
 
     /* Hint: What can you do with a media query and flexbox? */
     @media (max-width: 1250px) {
+      html {
+        font-size: 20px;
+      }
       
     }
   </style>
