--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <style>
 
+
     body {
       font-family: 'Sono', sans-serif;
       text-align: center;
@@ -69,8 +70,9 @@
 
     /* Hint: What can you do with a media query and flexbox? */
     @media (max-width: 1250px) {
+      
       html {
-        font-size: 20px;
+        font-size: larger;
       }
       
     }
