--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
 
     /* Hint: What can you do with a media query and flexbox? */
-    @media (max-width: 1250px) {
+    @media (max-width: 600px) {
       
-      html {
-        font-size: larger;
-      }
+     .plan-button {
+      font-size: larger;
+     }
       
     }
   </style>
