--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
   <style>
 
 
+    header {
+      background-color: #f2f2f2;
+      width: 100%;
+      margin-bottom: 30px;
+
+    }
+
+    header h1 {
+      margin: 0;
+      padding: 30px;
+    }
+
     body {
       font-family: 'Sono', sans-serif;
       text-align: center;
-      -webkit-text-size-adjust: 100%;
+      margin: 0;
     }
 
     .plan-features {
@@ -80,6 +92,9 @@
 </head>
 
 <body>
+  <header>
+    <h1>Choose your plan</h1>
+  </header>
   <div class="pricing-container">
     <div class="pricing-plan">
       <div class="plan-title">Basic</div>
